--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,10 @@
   "manifest_version": 3,
   "name": "Journal d'Humeur & Bien-être",
   "description": "Suivez votre humeur quotidienne et améliorez votre bien-être mental avec des analyses personnalisées",
-  "version": "1.0",
+  "version": "0.0.0.1",
+  "author": "Votre nom",
+  "homepage_url": "URL de votre site web",
+  "default_locale": "fr",
   "permissions": [
     "storage",
     "notifications",
@@ -45,7 +48,7 @@
   },
   "icons": {
     "16": "images/icon16.png",
-    "32": "images/icon32.png", 
+    "32": "images/icon32.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
