Update manifest and UI components for enhanced user experience and premium features. Changed author name in manifest, updated premium trial duration from 7 to 14 days, improved export functionality with custom date range options, and refined UI elements for suggestions and predictions. Removed deprecated development controls and added new analytics features.

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,7 @@
   "name": "Journal d'Humeur & Bien-être",
   "description": "Suivez votre humeur quotidienne et améliorez votre bien-être mental avec des analyses personnalisées",
   "version": "0.0.0.1",
-  "author": "Votre nom",
-  "homepage_url": "URL de votre site web",
-  "default_locale": "fr",
+  "author": "Jmcfunonline",
   "permissions": [
     "storage",
     "notifications",
